--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
     title  =  {AnimeShooter: A Multi-Shot Animation Dataset for Reference-Guided Video Generation},
     author =  {Qiu, Lu and Li, Yizhuo and Ge, Yuying and Ge, Yixiao and Shan, Ying and Liu, Xihui},
     year   =  {2025},
-    url    =  {xxx}
+    url    =  {https://arxiv.org/abs/2506.03126}
 }</code></pre>
                     </div>
                 </section>
