--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 <section class="section" id="citation">
                     <div class="container is-max-desktop content">
                         <h2 class="title">Citation</h2>
-                        <pre><code>@misc{xxx,
+                        <pre><code>@misc{qiu2025animeshooter,
     title  =  {AnimeShooter: A Multi-Shot Animation Dataset for Reference-Guided Video Generation},
     author =  {Qiu, Lu and Li, Yizhuo and Ge, Yuying and Ge, Yixiao and Shan, Ying and Liu, Xihui},
     year   =  {2025},
