--- a/index.html
+++ b/index.html
@@ -429,6 +429,8 @@
 
                 <section id="samples" class="samples section">
                     <h2>AnimeShooterGen in Reference-Guided Multi-Shot Storytelling</h2>
+                    <p>This section presents visual results from AnimeShooterGen, demonstrating its capabilities in reference-guided multi-shot storytelling. To enhance the immersive quality, AnimeShooterGen is currently integrated with a zero-shot Text-to-Audio model, TangoFlux, to generate accompanying audio tracks. Future work will explore audio-visual synchronization and co-generation.</p>
+                        
                     <p>We show three different stories of <b>a young girl</b> with the same reference image:</p>
                     
                     <div class="sample">
